# ossdev-02-485316

./: .clang-format  .clang-tidy  .gitignore  .travis.yml  LICENSE  README.md  meson.build
include/find_primes/: find_primes.h
src/: main.cc  meson.build
src/find_primes/: main.cc  main.h  meson.build
src/find_primes_lib/: find_primes.cc  meson.build
test/: meson.build  test_find_primes.cc  test_main.cc
